# LLM_OS

./: .pre-commit-config.yaml  README.md  pyproject.toml
llm_os/: __init__.py  cpu.py  main.py  settings.py  storage.py
llm_os/db/: chroma.sqlite3
llm_os/llm/: __init__.py  base.py  openai.py
llm_os/tools/: all_tools.py  calculator.py
